Updated the runtime version explicitly

--- a/src/app_local.json
+++ b/src/app_local.json
@@ -9,8 +9,7 @@
 	"taskbarIcon": "http://localhost:9070/taskbar-icon.png"
   },
   "runtime": {
-    "arguments": "",
-    "version": "stable"
+    "version": "19.89.59.24"
   },
   "shortcut": {
     "company": "OpenFin",
